welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: not found: value faireMotif
	faireMotif(Color.red, "gauche");
        ^PatternPicture:5: error: not found: value faireMotif
	faireMotif(Color.blue, "gauche");
        ^